fixed footer but not the overlap

--- a/Styles.css
+++ b/Styles.css
@@ -266,7 +266,7 @@ footer{
     background: #131313;
     height: auto;
     width: 100vw;
-    padding: 40px;
+    padding-top: 40px;
 }
 
 footer h1{
